[package]
name = "icmp"
description = "ICMP socket"
version = "0.1.5"
authors = ["svartalf <self@svartalf.info>"]
repository = "https://github.com/svartalf/rust-icmp"
keywords = ["icmp", "socket"]
license = "MIT"

[features]
default = []

[dependencies]
libc = "0.2.17"
clippy = { version = "0.0.95", optional = true }
