[package]
name = "icmp"
description = "ICMP socket"
version = "0.2.0"
authors = ["svartalf <self@svartalf.info>"]
repository = "https://github.com/svartalf/rust-icmp"
keywords = ["icmp", "socket"]
license = "MIT"

[features]
default = []

[dependencies]
libc = "0.2"
clippy = { version = "0.0.162", optional = true }
