[package]
name = "icmp"
description = "ICMP socket"
version = "0.3.0"
authors = ["svartalf <self@svartalf.info>"]
repository = "https://github.com/svartalf/rust-icmp"
keywords = ["icmp", "socket"]
license = "Apache-2.0 OR MIT"
edition = "2018"

[features]
default = []

[dependencies]
libc = "0.2.51"
